--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
-    <meta name="description" content="">
+	<meta name="robots" content="index follow">
+    <meta name="description" content="Agence web à Paris, stratégie web, illustrations, design de site web">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
@@ -46,7 +46,7 @@
 							<a href="index.html">Accueil</a>
 						</li>
 						<li>
-							<a href="page2.html">Contact</a>
+							<a href="contact.html">Contact</a>
 						</li>
 					</ul>
 				</div>
@@ -65,7 +65,7 @@
 						Agence La Panthère
 					</h1>
 					<div class="text-center">
-						<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+						<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 					</div>
 				</div>
 			</div>
@@ -78,7 +78,7 @@
 		<div class="container bloc-md">
 			<div class="row">
 				<div class="col-sm-12 text-center">
-					<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.webp" />
+					<p class="description_agence">L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet</p>
 				</div>
 			</div>
 			<div class="row voffset-lg med-width-whitespace">
@@ -89,7 +89,7 @@
 					<h3 class="mg-md text-center">
 						Web design
 					</h3>
-					<p class="text-center ">
+					<p class="text-center">
 						Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
 					</p>
 				</div>
@@ -129,13 +129,13 @@
 	<!-- bloc-3-what-i-do -->
 	<article class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
 		<div class="container bloc-lg">
-			<div class="row tight-width-whitespace black-background">
+			<div class="bloc2 black-background">
 				<div class="col-sm-12">
 					<h2 class="mg-md text-center tc-white">
 						Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
 					</h2>
 					<p class="text-center white">
-						Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br>
+						Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a><br>
 					</p>
 				</div>
 			</div>
@@ -153,7 +153,7 @@
 			</div>
 			<div class="row tight-width-whitespace portfolio-row">
 				<div class="col-sm-6">
-					<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="paris web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" /></a>
+					<a href="#" data-lightbox="img/livres.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/livres.webp" alt="Refonte site web journal" class="img-responsive portfolio-thumb" /></a>
 					<h3 class="mg-md text-center">
 						Refonte d'un site web pour un journal local
 					</h3>
@@ -162,7 +162,7 @@
 					</p>
 				</div>
 				<div class="col-sm-6">
-					<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
+					<a href="#" data-lightbox="img/appareil_photo.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/appareil_photo.webp" class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes" /></a>
 					<h3 class="mg-md text-center">
 						Création d'un site web pour photographes
 					</h3>
@@ -173,7 +173,7 @@
 			</div>
 			<div class="row tight-width-whitespace portfolio-row">
 				<div class="col-sm-6">
-					<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.bmp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"/></a>
+					<a href="#" data-lightbox="img/outils.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/outils.webp" class="img-ligne2" alt="Création d'un site web pour voyageur"/></a>
 					<h3 class="mg-md text-center">
 						Création d'un site internet pour un voyageur
 					</h3>
@@ -182,7 +182,7 @@
 					</p>
 				</div>
 				<div class="col-sm-6">
-					<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.bmp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
+					<a href="#" data-lightbox="img/bureau.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/bureau.webp" class="img-ligne2" alt="Création d'un site web pour agence de mariage" /></a>
 					<h3 class="mg-md text-center">
 						Conception d'un site pour une agence de mariage
 					</h3>
@@ -199,7 +199,7 @@
 	<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 		<div class="container bloc-lg">
 			<div class="row">
-				<h2 class="mg-md text-center tc-white">
+				<h2 class="mg-md text-center tc-white2">
 					Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 				</h2>
 				<div class="col-sm-12 text-center">
@@ -244,7 +244,11 @@
 			</div>
 		</div>
 	</footer>
-	
+<script src="./js/jquery-2.1.0.js"></script>
+<script src="./js/bootstrap.js"></script>
+<script src="./js/blocs.js"></script>
+<script src="./js/jquery.touchSwipe.js" asynch></script>
+<script src="./js/gmaps.js"></script>
 	<!-- Footer - bloc-8 END -->
 
 	</div>
@@ -252,9 +256,5 @@
 		
 
 </body>
-<script src="./js/jquery-2.1.0.js"></script>
-<script src="./js/bootstrap.js"></script>
-<script src="./js/blocs.js"></script>
-<script src="./js/jquery.touchSwipe.js" asynch></script>
-<script src="./js/gmaps.js"></script>
+
 </html>
