--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
 
 			<nav class="navbar row">
 				<div class="navbar-header">
-					<div class="keywords">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
-					<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.webp" alt="paris web design logo agence web meilleure agence" height="40" /></a>
-					<div class="keywords">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
+					<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.webp" alt="logo" height="40" width="217" /></a>
 					<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 						<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 					</button>
@@ -247,7 +245,7 @@
 <script src="./js/jquery-2.1.0.js"></script>
 <script src="./js/bootstrap.js"></script>
 <script src="./js/blocs.js"></script>
-<script src="./js/jquery.touchSwipe.js" asynch></script>
+<script src="./js/jquery.touchSwipe.js" async></script>
 <script src="./js/gmaps.js"></script>
 	<!-- Footer - bloc-8 END -->
 
