--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
 	<meta name="robots" content="index follow">
-    <meta name="description" content="Agence web à Paris, stratégie web, illustrations, design de site web">
+    <meta name="description" content="Agence web à Lyon, stratégie web, illustrations, design de site web">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
