--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
 	<meta name="robots" content="index follow">
-    <meta name="description" content="Agence web à Paris, stratégie web, illustrations, design de site web">
+    <meta name="description" content="Agence web à Lyon, stratégie web, illustrations, design de site web">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
@@ -58,7 +58,7 @@
 		<div class="container bloc-lg">
 			<div class="row tight-width-whitespace">
 				<div class="col-sm-12">
-					<img src="img/logo.webp" class="center-block image-resize-mode" width="100" alt="Agence La Panthère, agence web paris, création logo paris" />
+					<img src="img/logo.webp" class="center-block image-resize-mode" width="100" alt="Agence La Panthère, agence web Lyon, création logo Lyon" />
 					<h1 class="text-center hero-bloc-text tc-white ">
 						Agence La Panthère
 					</h1>
